fix footer gap

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,6 +4,7 @@ footer{
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
     margin: 0%;
+    padding: 40px;
 }
 
 a{
